commit al master del blogpost and css mas reciente

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,24 @@
 body{
-        color:blueviolet;
+        color:#333;
         text-align: center;
-        font-family: 'Times New Roman', Times, serif;   
+        font-family: Arial;
+        font-size: 16px;
+        margin:0;
+        padding:0;   
     }
+
+#container 
+
+{ 
+    width:70%;
+    padding: 1em;
+    text-align: left;
+    margin: 0 auto;
+}
+#container h1 
+
+{
+    font-size: 20px;
+}
+
+
