--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-        color:#901010;
+        color:#3d9010;
         text-align: center;
         font-family: Arial;
         font-size: 16px;
