--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-        color:#1ea23f;
+        color:#901081;
         text-align: center;
         font-family: Arial;
         font-size: 16px;
